--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "kissy",
+    "name": "KISSY",
     "version": "1.2.0",
     "description": "KISSY on NodeJS",
     "author": "yiminghe <yiminghe@gmail.com>",
